--- a/vacinition/source/index.html
+++ b/vacinition/source/index.html
@@ -6,7 +6,10 @@
 
 @@include('blocks/call-to-action.htm')
 
-@@include('blocks/about.htm')
+@@include('blocks/about.php')
+
+
+
 
 @@include('blocks/about-tab.htm')
 
