--- a/vacinition/theme/blog.html
+++ b/vacinition/theme/blog.html
@@ -167,7 +167,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item @@about">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.php">About</a>
         </li>
         <li class="nav-item @@service">
           <a class="nav-link" href="service.html">Service</a>
@@ -472,7 +472,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="about.html">About</a>
+          <a href="about.php">About</a>
         </li>
         <li>
           <a href="contact.html">Contact</a>
