--- a/vacinition/theme/index.html
+++ b/vacinition/theme/index.html
@@ -170,7 +170,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item @@about">
-          <a class="nav-link" href="about.php">About</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item @@service">
           <a class="nav-link" href="service.html">Service</a>
@@ -215,7 +215,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="content style text-center">
             <h2 class="text-white text-bold mb-2" data-animation-in="slideInLeft">Best vaccines</h2>
             
-            <a href="about.php" class="btn btn-main btn-white" data-animation-in="slideInLeft" data-duration-in="1.2">Get an appointment</a>
+            <a href="about.html" class="btn btn-main btn-white" data-animation-in="slideInLeft" data-duration-in="1.2">Get an appointment</a>
           </div>
           <!-- Slide Content End -->
         </div>
@@ -230,7 +230,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <!-- Slide Content Start-->
           <div class="content style text-center">
             <h2 class="text-white" data-animation-in="slideInRight">We Care About Your Health</h2>
-            <a href="about.php" class="btn btn-main btn-white" data-animation-in="slideInRight" data-duration-in="1.2">Get an appointment</a>
+            <a href="about.html" class="btn btn-main btn-white" data-animation-in="slideInRight" data-duration-in="1.2">Get an appointment</a>
           </div>
           <!-- Slide Content End-->
         </div>
@@ -245,7 +245,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <!-- Slide Content Start -->
           <div class="content text-center style">
             <h2 class="text-white text-bold mb-2" data-animation-in="slideInRight">Our Best Doctors</h2>
-            <a href="about.php" class="btn btn-main btn-white" data-animation-in="slideInRight"  data-duration-in="1.2">Get an appointment</a>
+            <a href="about.html" class="btn btn-main btn-white" data-animation-in="slideInRight"  data-duration-in="1.2">Get an appointment</a>
           </div>
           <!-- Slide Content End -->
         </div>
@@ -661,7 +661,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="about.php">About</a>
+          <a href="about.html">About</a>
         </li>
         <li>
           <a href="contact.html">Contact</a>
