--- a/vacinition/source/service.html
+++ b/vacinition/source/service.html
@@ -21,7 +21,7 @@
             <li><i class="fas fa-caret-right"></i>dolorum esse tempora id architecto</li>
             <li><i class="fas fa-caret-right"></i>optio repellendus quasi nisi vitae</li>
           </ul>
-          <a href="appointment.php" class="btn btn-style-one">Appoint</a>
+          <a href="appointment.html" class="btn btn-style-one">Appoint</a>
         </div>
       </div>
       <div class="col-lg-6">
