--- a/vacinition/theme/about.html
+++ b/vacinition/theme/about.html
@@ -194,7 +194,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 </nav>
 
 <!--Page Title-->
-<section class="page-title text-center" style="background-image:url(images/background/3.jpg);">
+<section class="page-title text-center" style="background-image:url(images/background/ab.jpg);">
     <div class="container">
         <div class="title-text">
             <h1>about us</h1>
