--- a/vacinition/theme/contact.html
+++ b/vacinition/theme/contact.html
@@ -117,7 +117,7 @@ FACEBOOK: https://www.facebook.com/themefisher
       <div class="col-xl-4 col-lg-3">
         <div class="logo">
           <a href="index.html">
-            <img loading="lazy" class="img-fluid" src="images/logo.png" alt="logo">
+            <img loading="lazy" class="img-fluid" src="images/logo.jpg" alt="logo">
           </a>
         </div>
       </div>
