--- a/vacinition/theme/service.html
+++ b/vacinition/theme/service.html
@@ -192,7 +192,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   </div>
 </nav>
 <!--Page Title-->
-<section class="page-title text-center" style="background-image:url(images/background/3.jpg);">
+<section class="page-title text-center" style="background-image:url(images/background/services.jpg);">
     <div class="container">
         <div class="title-text">
             <h1>service</h1>
@@ -212,7 +212,7 @@ FACEBOOK: https://www.facebook.com/themefisher
     <div class="row">
       <div class="col-lg-6 mb-5 mb-lg-0">
         <div class="content-block">
-          <h2>Clinical And <br>Medical Education</h2>
+          <h2>SERVICES<br>we provide</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eius optio repellendus quasi nisi vitae
             laboriosam explicabo eligendi sapiente in.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, dolorum esse tempora id architecto
@@ -235,7 +235,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <div class="card-header" role="tab" id="headingOne">
                   <h4 class="card-title">
                     <a role="button" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Why Should I choose Medical Health
+                      Why Should I choose this vaccine
                     </a>
                   </h4>
                 </div>
@@ -311,29 +311,26 @@ FACEBOOK: https://www.facebook.com/themefisher
   <div class="container service-box">
     <div class="row">
       <div class="col-lg-6">
-        <img loading="lazy" class="img-fluid" src="images/services/service-one.jpg" alt="service-image">
+        <img loading="lazy" class="img-fluid" src="images/services/services4.png" alt="service-image">
       </div>
       <div class="col-lg-6">
         <div class="contents">
           <div class="section-title">
-            <h3>pulmonary</h3>
+            <h3>services</h3>
           </div>
           <div class="text">
-            <p>The implant fixture is first placed, so that it ilikely to osseointegrate, then a dental prosthetic
-              is added.
-              then a dental prosthetic is added.then a dental pros- thetic is added.</p>
-            <p>The implant fixture is first placed, so that it ilikely to osseointegrate, then a dental prosthetic
-              is added.
-              then a dental prosthetic is added.then a dental pros- thetic is added.</p>
+            <p>Why do you need to get vaccinated?
+              The Centers for Disease Control and Prevention (CDC) recommends vaccinations 
+              throughout your life to protect against many infections. When you skip vaccines,
+               you leave yourself vulnerable to illnesses such as shingles, flu, and HPV and 
+               hepatitis B–both leading causes of cancer.</p>
+               <p>
+                Read more about vaccines on the Official Vaccines page from the World Health 
+                Organization. Info on Initiatives, Diseases, Impact and Common FAQs on Vaccines
+                 and Immunization. Latest WHO conferences. Rolling updates. All info in one place
+               </p>
           </div>
-          <ul class="content-list">
-            <li>
-              <i class="far fa-check-circle"></i>Whitening is among the most popular dental</li>
-            <li>
-              <i class="far fa-check-circle"></i>Teeth cleaning is part of oral hygiene and involves</li>
-            <li>
-              <i class="far fa-check-circle"></i>Teeth cleaning is part of oral hygiene and involves</li>
-          </ul>
+         
           <a href="service.html" class="btn btn-style-one">Read more</a>
         </div>
       </div>
@@ -358,13 +355,13 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="inner-box">
               <div class="img_holder">
                 <a href="service.html">
-                  <img loading="lazy" src="images/gallery/1.jpg" alt="images" class="img-fluid">
+                  <img loading="lazy" src="images/gallery/vaccineS1.jpg" alt="images" class="img-fluid">
                 </a>
               </div>
               <div class="image-content text-center">
                 <span>Better Service At Low Cost</span>
                 <a href="service.html">
-                  <h6>Dormitory</h6>
+                  <h6>vaccine</h6>
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, vero.</p>
               </div>
@@ -374,7 +371,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="inner-box">
               <div class="img_holder">
                 <a href="service.html">
-                  <img loading="lazy" src="images/gallery/2.jpg" alt="images" class="img-fluid">
+                  <img loading="lazy" src="images/gallery/vaccineS3.jpg" alt="images" class="img-fluid">
                 </a>
               </div>
               <div class="image-content text-center">
@@ -390,7 +387,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="inner-box">
               <div class="img_holder">
                 <a href="service.html">
-                  <img loading="lazy" src="images/gallery/3.jpg" alt="images" class="img-fluid">
+                  <img loading="lazy" src="images/gallery/vaccineS2.jpg" alt="images" class="img-fluid">
                 </a>
               </div>
               <div class="image-content text-center">
@@ -406,13 +403,13 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="inner-box">
               <div class="img_holder">
                 <a href="service.html">
-                  <img loading="lazy" src="images/gallery/1.jpg" alt="images" class="img-fluid">
+                  <img loading="lazy" src="images/gallery/vaccineS4.jpg" alt="images" class="img-fluid">
                 </a>
               </div>
               <div class="image-content text-center">
                 <span>Better Service At Low Cost</span>
                 <a href="service.html">
-                  <h6>Dormitory</h6>
+                  <h6>vaccine</h6>
                 </a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, vero.</p>
               </div>
@@ -422,7 +419,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="inner-box">
               <div class="img_holder">
                 <a href="service.html">
-                  <img loading="lazy" src="images/gallery/2.jpg" alt="images" class="img-fluid">
+                  <img loading="lazy" src="images/gallery/vaccineS5.jpg" alt="images" class="img-fluid">
                 </a>
               </div>
               <div class="image-content text-center">
@@ -438,7 +435,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="inner-box">
               <div class="img_holder">
                 <a href="service.html">
-                  <img loading="lazy" src="images/gallery/3.jpg" alt="images" class="img-fluid">
+                  <img loading="lazy" src="images/gallery/vaccineS6.jpg" alt="images" class="img-fluid">
                 </a>
               </div>
               <div class="image-content text-center">
