--- a/vacinition/theme/about.html
+++ b/vacinition/theme/about.html
@@ -214,45 +214,62 @@ FACEBOOK: https://www.facebook.com/themefisher
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-        <img loading="lazy" src="images/services/service-one.jpg" class="responsive" alt="story">
+        <img loading="lazy" src="images/services/our worl.jpg" class="responsive" alt="story">
       </div>
       <div class="col-lg-6">
         <div class="story-content">
-          <h2>Our Story</h2>
-          <h5 class="tagline">"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, minima. Nemo impedit fuga nostrum expedita sint dicta ullam quam et harum velit saepe"</h6>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus totam ducimus est vero, officiis,
-              placeat optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias aliquam nesciunt fugit optio
-              illum aut. consectetur adipisicing elit. Neque assumenda, est quam perferendis
-              expedita autem?</p>
-            <h6>Mission</h6>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam nihil dolorum beatae consequatur mollitia
-              iure?</p>
-            <h6>Vision</h6>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda consectetur adipisci, voluptatum
-              dolores nostrum omnis.</p>
+          <h2><b> OUR WORK</b></h2>
+          We put science to work to build a healthier, safer world
+          The World Health Organization leads and champions global efforts to achieve 
+          better health for all. By connecting countries, people and partners, we strive
+           to give everyone, everywhere an equal chance at a safe and healthy life.
+          <br><br>
+          From emerging epidemics such as COVID-19 and Zika to the persistent threat 
+          of communicable diseases including HIV, malaria and tuberculosis and chronic diseases 
+          such as diabetes, heart disease and cancer, we bring together 194 countries and work on 
+          the frontlines in 150+ locations to confront the biggest health challenges of our time
+           and measurably advance the well-being of the world’s people
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Promo Video -->
-<section class="promo-video">
+<!-- Our COLLABS -->
+<section class="story">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
-        <div class="block text-center">
-          <h6>About Our Hospital</h6>
-          <h1>The World <br>
-            Class Hospitality
-          </h1>
-          <a data-fancybox
-            href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0"><i class="fas fa-play"></i></a>
+      
+      <div class="col-lg-6">
+        <div class="story-content">
+          <h2><b>Collaboration and partnership</b></h2>
+          <P>
+            List of global health partnerships and collaborative arrangements
+        WHO is involved in a large number of other partnerships and collaborative arrangements. 
+       The following document provides an overview of these partnerships and collaborative 
+      arrangements and WHO’s role in them.
+      <br><br>
+      The partnership demonstrates a clear added value for public health.
+The partnership has a clear goal that concerns a priority area of work for WHO.
+Partnerships are guided by the technical norms and standards established by WHO.
+The partnership supports national development objectives.
+The partnership ensures appropriate and adequate participation of stakeholders.
+The roles of partners are clear.
+Transaction costs, potential benefits and risks related to a partnership are evaluated.
+Pursuit of the public-health goal takes precedence over the special interests of participants.
+The partnership has an independent external evaluation and/or self-monitoring mechanism.
+          </P>
         </div>
+      </div>
+      <div class="col-lg-6">
+        <img loading="lazy" src="images/services/collabration.jpg" class="responsive" alt="story">
       </div>
     </div>
   </div>
 </section>
+
+
+
 
 <section class="gallery bg-gray">
   <div class="container">
@@ -260,7 +277,7 @@ FACEBOOK: https://www.facebook.com/themefisher
       <div class="col-lg-12">
         <div class="section-title text-center">
           <h3>Collected Shots
-            <span>of Our Hospital</span>
+            <span>of Our  different Hospitals</span>
           </h3>
           <p>Leverage agile frameworks to provide a robust synopsis for high level overv-
             <br>iews. Iterative approaches to corporate strategy...</p>
@@ -268,31 +285,31 @@ FACEBOOK: https://www.facebook.com/themefisher
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="gallery-item">
-          <img loading="lazy" src="images/gallery/gallery-01.jpg" class="img-fluid" alt="gallery-image">
-          <a data-fancybox="images" href="images/gallery/gallery-01.jpg"></a>
+          <img loading="lazy" src="images/gallery/gallery1.jpg" class="img-fluid" alt="gallery-image">
+          <a data-fancybox="images" href="images/gallery/gallery1.jpg"></a>
           <h3>Facility 01</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, in.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="gallery-item">
-          <img loading="lazy" src="images/gallery/gallery-02.jpg" class="img-fluid" alt="gallery-image">
-          <a data-fancybox="images" href="images/gallery/gallery-02.jpg"></a>
+          <img loading="lazy" src="images/gallery/gallery2.jpg" class="img-fluid" alt="gallery-image">
+          <a data-fancybox="images" href="images/gallery/gallery2.jpg"></a>
           <h3>Facility 02</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, in.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="gallery-item">
-          <img loading="lazy" src="images/gallery/gallery-03.jpg" class="img-fluid" alt="gallery-image">
-          <a data-fancybox="images" href="images/gallery/gallery-03.jpg"></a>
+          <img loading="lazy" src="images/gallery/gallery3.jpg" class="img-fluid" alt="gallery-image">
+          <a data-fancybox="images" href="images/gallery/gallery3.jpg"></a>
           <h3>Facility 03</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, in.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="gallery-item">
-          <img loading="lazy" src="images/gallery/gallery-04.jpg" class="img-fluid" alt="gallery-image">
+          <img loading="lazy" src="images/gallery/gallery4.jpg" class="img-fluid" alt="gallery-image">
           <a data-fancybox="images" href="images/gallery/gallery-04.jpg"></a>
           <h3>Facility 04</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, in.</p>
@@ -300,16 +317,16 @@ FACEBOOK: https://www.facebook.com/themefisher
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="gallery-item">
-          <img loading="lazy" src="images/gallery/gallery-05.jpg" class="img-fluid" alt="gallery-image">
-          <a data-fancybox="images" href="images/gallery/gallery-05.jpg"></a>
+          <img loading="lazy" src="images/gallery/gallery5.jpg" class="img-fluid" alt="gallery-image">
+          <a data-fancybox="images" href="images/gallery/gallery5.jpg"></a>
           <h3>Facility 05</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, in.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="gallery-item">
-          <img loading="lazy" src="images/gallery/gallery-06.jpg" class="img-fluid" alt="gallery-image">
-          <a data-fancybox="images" href="images/gallery/gallery-06.jpg"></a>
+          <img loading="lazy" src="images/gallery/gallery6.jpg" class="img-fluid" alt="gallery-image">
+          <a data-fancybox="images" href="images/gallery/gallery6.jpg"></a>
           <h3>Facility 06</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, in.</p>
         </div>
