--- a/vacinition/theme/appointment.html
+++ b/vacinition/theme/appointment.html
@@ -194,7 +194,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 </nav>
 
 <!--Page Title-->
-<section class="page-title text-center" style="background-image:url(images/background/3.jpg);">
+<section class="page-title text-center" style="background-image:url(images/background/appoint.jpg);">
     <div class="container">
         <div class="title-text">
             <h1>appointment</h1>
@@ -229,9 +229,9 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </div>
                 <div class="form-group">
                   <select class="form-control" name="subject">
-                    <option>Departments</option>
-                    <option>Diagnostic</option>
-                    <option>Psychological</option>
+                    <option>Vaccines</option>
+                    <option>flu vaccine</option>
+                    <option>covid vaccine</option>
                   </select>
                 </div>
               </div>
@@ -246,8 +246,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <div class="form-group">
                   <select class="form-control" name="subject">
                     <option>Doctor</option>
-                    <option>Diagnostic</option>
-                    <option>Psychological</option>
+                    <option>chils Specialist</option>
+                    <option>doctors for adults</option>
                   </select>
                 </div>
               </div>
@@ -266,7 +266,7 @@ FACEBOOK: https://www.facebook.com/themefisher
       <div class="col-lg-6 mb-4 mb-lg-0 order-0 order-lg-1">
         <div class="appointment-image-holder ml-0 ml-lg-4">
           <figure>
-            <img loading="lazy" class="w-100" src="images/background/appoinment.jpg" alt="Appointment">
+            <img loading="lazy" class="w-100" src="images/background/appnew.jpg" alt="Appointment">
           </figure>
         </div>
       </div>
