--- a/vacinition/theme/team.html
+++ b/vacinition/theme/team.html
@@ -193,7 +193,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 </nav>
 
 <!--Page Title-->
-<section class="page-title text-center" style="background-image:url(images/background/3.jpg);">
+<section class="page-title text-center" style="background-image:url(images/background/team.jpg);">
     <div class="container">
         <div class="title-text">
             <h1>Team</h1>
@@ -226,10 +226,10 @@ FACEBOOK: https://www.facebook.com/themefisher
               <a class="nav-link active" id="doctor-tab" data-toggle="tab" href="#doctor" role="tab" aria-controls="doctor" aria-selected="true">doctor</a>
             </li>
             <li class="nav-item" role="presentation">
-              <a class="nav-link" id="event-planning-tab" data-toggle="tab" href="#event-planning" role="tab" aria-controls="event-planning" aria-selected="false">event planning</a>
+              <a class="nav-link" id="event-planning-tab" data-toggle="tab" href="#event-planning" role="tab" aria-controls="event-planning" aria-selected="false">child Specialist</a>
             </li>
             <li class="nav-item" role="presentation">
-              <a class="nav-link" id="lab-tab" data-toggle="tab" href="#lab" role="tab" aria-controls="lab" aria-selected="false">lab</a>
+              <a class="nav-link" id="lab-tab" data-toggle="tab" href="#lab" role="tab" aria-controls="lab" aria-selected="false">for adults</a>
             </li>
             <li class="nav-item" role="presentation">
               <a class="nav-link" id="marketing-tab" data-toggle="tab" href="#marketing" role="tab" aria-controls="marketing" aria-selected="false">marketing</a>
