--- a/vacinition/theme/appointment.html
+++ b/vacinition/theme/appointment.html
@@ -246,7 +246,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <div class="form-group">
                   <select class="form-control" name="subject">
                     <option>Doctor</option>
-                    <option>chils Specialist</option>
+                    <option>child Specialist</option>
                     <option>doctors for adults</option>
                   </select>
                 </div>
