--- a/vacinition/theme/gallery.html
+++ b/vacinition/theme/gallery.html
@@ -197,7 +197,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 <section class="page-title text-center" style="background-image:url(images/background/gback\'.jpg);">
     <div class="container">
         <div class="title-text">
-            <h1>gallery</h1>
+            <h1>vaccinations</h1>
             <ul class="title-menu clearfix">
                 <li>
                     <a href="index.html">home &nbsp;/</a>
