--- a/vacinition/theme/index.html
+++ b/vacinition/theme/index.html
@@ -548,9 +548,6 @@ FACEBOOK: https://www.facebook.com/themefisher
   </div>
 </section>
 <!--End testimonial-section-->
-
-
-
 <!--footer-main-->
 <footer class="footer-main">
   <div class="footer-top">
@@ -561,7 +558,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="footer-logo">
               <figure>
                 <a href="index.html">
-                  <img loading="lazy" class="img-fluid" src="images/footerlogo2.jpg" alt="medic">
+                  <img loading="lazy" class="img-fluid" src="images/logo-2.png" alt="medic">
                 </a>
               </figure>
             </div>
@@ -591,27 +588,27 @@ FACEBOOK: https://www.facebook.com/themefisher
           </div>
         </div>
         <div class="col-lg-3 col-md-5 mb-3 mb-md-0">
-          <h2>Policies</h2>
+          <h2>Services</h2>
           <ul class="menu-link">
             <li>
               <a href="service.html">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>Cyber security</a>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Orthopadic Liabilities</a>
             </li>
             <li>
               <a href="service.html">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>about</a>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Dental Clinic</a>
             </li>
             <li>
               <a href="service.html">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>services</a>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Dormamu Clinic</a>
             </li>
             <li>
               <a href="service.html">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>vaccines</a>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Psycological Clinic</a>
             </li>
             <li>
               <a href="service.html">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>hospitals</a>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Gynaecological Clinic</a>
             </li>
           </ul>
         </div>
@@ -623,7 +620,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <div class="media">
                   <div class="media-left mr-3">
                     <a href="blog-details.html">
-                      <img loading="lazy" src="images/blog/post.jpg" alt="post-thumb">
+                      <img loading="lazy" src="images/blog/post-thumb-small.jpg" alt="post-thumb">
                     </a>
                   </div>
                   <div class="media-body">
@@ -636,7 +633,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <div class="media">
                   <div class="media-left mr-3">
                     <a href="blog-details.html">
-                      <img loading="lazy" src="images/blog/post2.jpg" alt="post-thumb">
+                      <img loading="lazy" src="images/blog/post-thumb-small.jpg" alt="post-thumb">
                     </a>
                   </div>
                   <div class="media-body">
@@ -710,4 +707,3 @@ FACEBOOK: https://www.facebook.com/themefisher
 </body>
 
 </html>
-
