--- a/vacinition/theme/about.html
+++ b/vacinition/theme/about.html
@@ -485,7 +485,7 @@ The partnership has an independent external evaluation and/or self-monitoring me
             <div class="footer-logo">
               <figure>
                 <a href="index.html">
-                  <img loading="lazy" class="img-fluid" src="images/logo-2.png" alt="medic">
+                  <img loading="lazy" class="img-fluid" src="images/flogo.jpg" alt="medic">
                 </a>
               </figure>
             </div>
