--- a/vacinition/theme/contact.html
+++ b/vacinition/theme/contact.html
@@ -299,7 +299,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="footer-logo">
               <figure>
                 <a href="index.html">
-                  <img loading="lazy" class="img-fluid" src="images/logo-2.png" alt="medic">
+                  <img loading="lazy" class="img-fluid" src="images/flogo.jpg" alt="medic">
                 </a>
               </figure>
             </div>
