--- a/vacinition/theme/index.html
+++ b/vacinition/theme/index.html
@@ -361,6 +361,20 @@ FACEBOOK: https://www.facebook.com/themefisher
 	</div>
 </section>
 <!--End about section-->
+<br><br>
+<!-- banner -->
+<section class="page-title text-center" style="background-image:url(images/background/bannerv.jpg);">
+  <div class="container"
+  style="height: 30vh;">
+      <div class="title-text" style="font-size: small; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+          <h1  >FLATE 30% off !!
+          <br>on your first vaccine</h1>
+         
+        
+      </div>
+  </div>
+</section>
+<!-- bannner end -->
 
 
 
@@ -410,6 +424,8 @@ FACEBOOK: https://www.facebook.com/themefisher
 </section>
 <!--End team section-->
 
+
+<br><br>
 <!--testimonial-section-->
 <section class="testimonial-section" style="background: url(images/testimonials/banner4.jpg);">
   <div class="container">
@@ -548,6 +564,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   </div>
 </section>
 <!--End testimonial-section-->
+<br><br>
 <!--footer-main-->
 <footer class="footer-main">
   <div class="footer-top">
@@ -558,7 +575,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             <div class="footer-logo">
               <figure>
                 <a href="index.html">
-                  <img loading="lazy" class="img-fluid" src="images/logo-2.png" alt="medic">
+                  <img loading="lazy" class="img-fluid" src="images/flogo.jpg" alt="medic">
                 </a>
               </figure>
             </div>
