--- a/vacinition/theme/appointment.html
+++ b/vacinition/theme/appointment.html
@@ -329,12 +329,8 @@ FACEBOOK: https://www.facebook.com/themefisher
         <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="about-widget">
             <div class="footer-logo">
-              <figure>
-                <a href="index.html">
-                  <img loading="lazy" class="img-fluid" src="images/flogo.jpg" alt="medic">
-                </a>
-              </figure>
-            </div>
+              <h1>Social media handles</h1>
+              <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, temporibus?</p>
             <ul class="location-link">
               <li class="item">
