--- a/vacinition/theme/index.html
+++ b/vacinition/theme/index.html
@@ -572,14 +572,9 @@ FACEBOOK: https://www.facebook.com/themefisher
       <div class="row justify-content-between">
         <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="about-widget">
-            <div class="footer-logo">
-              <figure>
-                <a href="index.html">
-                  <img loading="lazy" class="img-fluid" src="images/flogo.jpg" alt="medic">
-                </a>
-              </figure>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, temporibus?</p>
+            
+          <h1>Social media handles</h1>
+          <br>
             <ul class="location-link">
               <li class="item">
                 <i class="fas fa-map-marker-alt"></i>
