--- a/vacinition/theme/index.html
+++ b/vacinition/theme/index.html
@@ -165,6 +165,8 @@ FACEBOOK: https://www.facebook.com/themefisher
       <div class="modal-body">
         <p>login yourself as a parent or hospital</p>
        <a href="login.php" class="btn btn-style-one">hospital</a>
+       <a href="/Medilab/login.php" class="btn btn-style-one">parents</a>
+
       </div>
 
     </div>
